# briefed

./: .gitignore  .mcp.json  CLAUDE.md  README.md  SETUP.md
.claude/: settings.local.json
.claude/skills/recall-ai/: SKILL.md
.firecrawl/: pipecat-changelog.md  pipecat-elevenlabs.md  pipecat-fastapi-ws.md  pipecat-stt.md  pipecat-transports.md  pipecat-ws-server.md  recall-output-audio-guide.md  recall-output-audio.md  recall-realtime-audio-protocol.md  recall-realtime-ws-endpoints.md  recall-stream-media.md  search-pipecat-recall.json  search-pipecat-stack.json  search-pipecat-transport.json  search-recall-audio.json  search-recall-cancel.json
.github/workflows/: deploy-backend-cloud-run.yml
backend-fastapi/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  _cloudrun_set_env.ps1  pyproject.toml
backend-fastapi/app/: ai_client.py  api_key_auth.py  auth_deps.py  config.py  context_pipeline.py  crud_routes.py  db.py  github_app.py  github_ingest.py  github_webhook.py  logger.py  main.py  output_media.py  post_meeting_email.py  rate_limit.py  recall_client.py  repo.py  sql.py  storage.py  tracing.py
backend-fastapi/app/pipeline/: __init__.py  bot_bridge.py  context.py  memory.py  nebius_client.py  recall_audio_ws.py  recall_output.py  runner.py  session.py  transports.py  turn_gate.py  turn_taking.py
backend-fastapi/db/: apply_schema.py  copy_data.py  schema.sql  verify_schema.py
backend-fastapi/scripts/: .gitignore  _voice_local_server.py  turn_gate_reset_test.py  voice_e2e_native.py  voice_e2e_test.py
backend-fastapi/scripts/botpage_test/: .gitignore  analyze.py  gen_ref.py  harness.js  harness_real.js  package.json  smoke.js
backend-fastapi/tests/: __init__.py  conftest.py  data_fixtures.py  fake_supabase.py  test_copilot_pipeline.py  test_e2e_context_and_ask.py  test_e2e_health_auth.py  test_e2e_meetings.py  test_e2e_webhooks.py  test_fake_supabase.py  test_post_meeting_email.py  test_screenshot_flow.py  test_trigger_detection.py  test_unkey_rate_limit.py  test_workos_auth.py  test_ws_copilot.py
bot-page/: index.html
docs/: SETUP_KEYS.md
frontend/: .gitignore  README.md  package-lock.json  package.json  tmp_globals.css  tmp_globals.css.map  tmp_home.html
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/src/components/: AgentForm.tsx  AuthProvider.tsx  ContextBuilder.tsx  DeleteRowButton.tsx  LandingHeader.tsx  MeetingAsk.tsx  MeetingChat.tsx  MeetingSession.tsx  Shell.tsx
frontend/src/lib/: auth.ts  cartesia-voices.ts  (+9 more)
scripts/: remove_logo_bg.py
(+28 files in other folders)
