[project]
name = "backend-fastapi"
version = "0.1.0"
description = "Briefed backend - AI meeting intelligence"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "httpx",
  "websockets>=12.0",
  "PyJWT",
  "cryptography",
  "supabase",
  "google-cloud-aiplatform>=1.60.0",
  "google-cloud-texttospeech>=2.16.0",
  "vertexai",
  "google-genai>=1.0.0",
  "python-dotenv",
  # v2 voice pipeline
  "pipecat-ai[deepgram,elevenlabs,silero,google,webrtc]>=0.0.105",
  "deepgram-sdk>=3.5",
  "elevenlabs>=1.0",
  # v2 observability + memory + auth
  "langsmith>=0.1.130",
  "supermemory>=0.3",
  "firebase-admin>=6.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
addopts = "-q"
